# cookiecutter-data-science

{{ cookiecutter.repo_name }}/: .envrc  Makefile  pyproject.toml  setup.py
