[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "{{ cookiecutter.version}}"
description = "{{ cookiecutter.description}}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.open_source_license }}"


[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.6.1"
python-dotenv = "^0.15.0"
fastapi = "^0.61.2"
pandas = "^1.1.4"
scikit-learn = "^0.23.2"
tqdm = "^4.48.0"
CellProfiler = "4.2.1"

[tool.poetry.dev-dependencies]
yapf = "^19.10b0"
docstr-coverage = "^1.2.0"
isort = "^5.2.2"
jupyter = "^1.0.0"
mypy = "^0.782"
pytest = "^6.0.1"
pyright = "*"
jedi = "*"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
src_paths = ["{{ cookiecutter.source_name }}", "tests"]

[tool.yapf]
based_on_style = 'facebook'
column_limit = 80

[tool.mypy]
plugins = "pydantic.mypy"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
